--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Nangka
-email: your@mail.com
+title: sync.blog
+email: me@alecchan.io
 description: > # this means to ignore newlines until "baseurl:"
-  Welcome to my awesome blog.
-baseurl: "/nangka" # the subpath of your site, e.g. /blog
-url: "https://rmsubekti.github.io" # the base hostname & protocol for your site
+  Official blog for sync.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://blog.sync.theater" # the base hostname & protocol for your site
 google_analytics: #your GA unique id, e.g. UA-xxxxxxxx-x
 disqus_username: #Your disqus_username to add comments on the post
 
